# StakeandEggs

./: .gitignore  LICENSE  README.md  asset-manifest.json  index.html
hello-chain/: .eslintrc.js  README.md  package.json
hello-chain/src/: App.css  App.tsx  utils.ts
program/: Cargo.toml
program/src/: entrypoint.rs  instructions.rs  lib.rs  processor.rs  state.rs
stake-ui/: package.json
stake-ui/src/: App.tsx  colors.ts  index.css  setupProxy.js  utils.ts
stake-ui/src/components/BuyEggCard/: BuyEggCard.tsx  index.ts  styles.ts
stake-ui/src/components/CreateEggCard/: CreateEggCard.tsx  index.ts  styles.ts
stake-ui/src/components/CreateEggDialog/: CreateEggDialog.tsx  Notification.tsx  index.ts  styles.ts
stake-ui/src/components/DailyRewardsCard/: DailyRewardsCard.tsx  index.ts  styles.ts
stake-ui/src/components/Egg/: Egg.tsx  index.ts  styles.ts
stake-ui/src/components/EggsCard/: EggsCard.tsx  index.ts  styles.ts
stake-ui/src/components/MarketCard/: MarketCard.tsx  index.ts  styles.ts
stake-ui/src/components/Navbar/: Navbar.tsx  styles.ts
stake-ui/src/store/: app.ts  vanilla.ts
static/css/: 2.7fc884d7.chunk.css  2.7fc884d7.chunk.css.map  main.505d6a14.chunk.css  main.505d6a14.chunk.css.map
static/js/: 2.af020cbf.chunk.js  2.af020cbf.chunk.js.LICENSE.txt  3.0bd3a24d.chunk.js  3.0bd3a24d.chunk.js.map  main.6648afd0.chunk.js  main.6648afd0.chunk.js.map  main.d8774750.chunk.js  main.d8774750.chunk.js.map  main.e6ae0393.chunk.js  main.e6ae0393.chunk.js.map  runtime-main.5341ed20.js  runtime-main.5341ed20.js.map
(+2 files in other folders)
