[package]
name = "transfer"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.5.8"
spl-associated-token-account = { version = "1.0.2",  features = ["no-entrypoint"] }
spl-token = { version = "3.1.0",  features = ["no-entrypoint"] }
arrayref = "0.3.6"  
# solana-stake-accounts = "1.5.8"
# solana-stake-program = "1.5.8"
# solana-stake-program = { path="../../solana/programs/stake" }

[features]
no-entrypoint = []
# test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]